--- a/my-app/src/styles.css
+++ b/my-app/src/styles.css
@@ -152,4 +152,13 @@ body {
     font-weight: bold;
     color: green;
   }
+  .number.marked {
+    background-color: green;
+    color: white;
+    /* border-radius: 50%;
+    padding: 5px;
+    display: inline-block;
+    text-align: center; */
+  }
+  
   
